[tool.poetry]
name = "protobuf2arr"
version = "0.1.4"
description = "Translate a protobuf message to Google's RPC array format."
authors = ["Kevin Ramdath <krpent@gmail.com>"]
repository = "https://github.com/minormending/protobuf2arr"
readme = "README.md"
license = "MIT"
keywords = ["protobuf", "google", "rpc"]

[tool.poetry.dependencies]
python = "^3.10"
protobuf = "^3.20.0"
simplejson = "^3.17.6"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
nose2 = "^0.11.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
